# ctv-bookedbiz-db

./: .dockerignore  .env  .env.dev  .env.example  .env.prod  .gitignore  BUSINESS_RULES_GUIDE.md  CLAUDE.md  Dockerfile  FLASK_WEB_UI_SUMMARY.md  GUIDE-ADVANCED-AUTOMATION.md  GUIDE-ASSIGNMENT-SYSTEM.md  GUIDE-BUSINESS-RULES.md  GUIDE-DAILY-COMMERCIALLOG.md  GUIDE-OPERATIONS.md  GUIDE-REVENUE-ANALYSIS.md  GUIDE-Railway.md  GUIDE-RaspberryWorkflow.md  GUIDE_Customer_Name_Normalization.md  LANGUAGE-BLOCK-IMPLEMENTATION.md  README.md  RUN_STUFF.md  RaspberryWorkflow.md  Revenue-Querying-By-Language-Guide.md  SCHEMA.sql  TwentyNineColumns.md  _repo_tree_paths.txt  ae_response.json  aes_list.json  assignment_sankey.html  backblaze_startup.sh  biz_rules_diag_script.py  charmaine_summary.json  check_dates.py  check_schema.py  clean_multi_language_2024.csv  clean_multi_language_patterns_2024.csv  cleanup_duplicates.py  cli_00_assignment_pipeline.py  cli_01_assign_language_blocks.py  (+107 more)
.claude/: CLAUDE.md  claude.md
cli/: __main__.py  assign_languages.py  daily_update.py  daily_update.py.backup.20250904  daily_update.py.debug  import_closed_data.py  weekly_update.py
data/: final_2024_revenue_breakdown.csv  manual_review_cache.json
docs/: API_AND_EXPORT_CONTRACTS.md  ARCHITECTURE.md  DEV_WORKFLOW.md  DOCUMENTATION_MIGRATION_PLAN.md  GUIDE-ASSIGNMENT-SYSTEM.md  GUIDE-CanonTools.md  GUIDE-DAILY-COMMERCIALLOG.md  GUIDE-MONTHLY-CLOSING.md  GUIDE-OPERATIONS.md  GUIDE-RaspberryWorkflow.md  GUIDE-failover-failback.md  GUIDE_DEV_WORKFLOW.md  GUIDE_GIT_WORKFLOW.md  HUMAN_OPERATOR_GUIDE.md  LLM_SYSTEM_GUIDE.md  RUNBOOKS.md  TAILSCALE_AUTH.md  USER_MANAGEMENT_SETUP.md  docker-setup.md  ops.md  planning-export-client-contract.md  sheet-export-client-contract.md  sheet-export-runbook.md  workbook-ae-drift-tracker.md
old/: ASSIGNED_PIPELINE_SUMMARY.md  FLASK_WEB_UI_SUMMARY.md  GUIDE-Revenue-Querying-By-Language.md  LANGUAGE-BLOCK-IMPLEMENTATION.md  PIPELINE_SYSTEM_DESIGN.md  cleanup_and_organize.py  cli_enhanced_quarterly_old.py  cli_language_blocks_report_old.py  database_analysis.sql  download_processed.py  example_usage.py  language_block_views_corrected.sql  programming_intelligence_dashboard_old.py  revenue_2024_validator.py  test_language_reports.py
queries/: monthly-revenue-summary.sql
scripts/: INSTALL_VALIDATION.md  budget_annual_planning.py  create_admin_user.py  ctv-db-sync.service  ctv-db-sync.timer  ctv-db-validation.env.template  ctv-db-validation.service  ctv-db-validation.timer  ctv-io-scanner.service  ctv-io-scanner.timer  deploy_language_block_schema.py  failback-to-pi-ctv.sh  failback-to-spotops.sh  failover-to-pi2.sh  generate_nord_routes.py  load_review_queue.py  manual_assignment_tool.py  migrate_agency_canonical_to_entity_aliases.py  populate_dallas_grid.py  populate_standard_grid.py  quick_pattern_assignment.py  scan_insertion_orders.py  setup_database.py  tailscale-serve.service  update_yearly_recap.sh  validate_production_db.py  verify_deploy_language_block_schema.py
sql/: normalize_views.sql  planning_tables.sql  sector_expectations_extras_migration.sql  user_management_tables.sql
src/: __init__.py  language_table_generator-OLD.py  market_analysis.py  market_language_analysis.py  multi_language_analyzer.py  (+9 more)
(+431 files in other folders)
