[project]
name = "bookedbiz-revenue-db"
version = "0.1.0"
description = "warehouse and analyze Booked Biz revenue data"
readme = "README.md"
authors = [{ name = "Kurt", email = "you@example.com" }]
dependencies = [
    "datasette>=0.65.1",
    "openpyxl>=3.1.5",
    "flask>=2.3.0",
    "pytest>=7.0.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "psutil>=7.0.0",
    "lxml>=5.4.0",
    "asgiref>=3.8.1",
    "uvicorn>=0.34.3",
]
requires-python = ">=3.10"

# Add CLI scripts for easier execution
[project.scripts]
weekly-update = "src.cli.weekly_update:main"
historical-import = "src.cli.bulk_import_historical:main"
close-month = "src.cli.close_month:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/cli",
    "src/database", 
    "src/importers",
    "src/models",
    "src/repositories",
    "src/reports",
    "src/services",
    "src/utils",
    "src/web"
]

[tool.uv]
# Optional: pin UV-specific settings